[gd_scene load_steps=19 format=3 uid="uid://dlajimkc33lpr"]

[ext_resource type="Script" path="res://busStage/background_controller.gd" id="2_ww0k3"]
[ext_resource type="Script" path="res://busStage/game_director.gd" id="2_xunmq"]
[ext_resource type="Script" path="res://busStage/enemy_spawner.gd" id="3_5fa7t"]
[ext_resource type="PackedScene" uid="uid://d1rbhalexqgng" path="res://enemy/orzel/orzel.tscn" id="3_ifilt"]
[ext_resource type="Texture2D" uid="uid://cwtx2ctif57wr" path="res://busStage/assets/tlo.png" id="3_m46g4"]
[ext_resource type="PackedScene" path="res://enemy/orzel/orzelbiz.tscn" id="4_3ga68"]
[ext_resource type="Script" path="res://busStage/bus.gd" id="6_0nbmv"]
[ext_resource type="Texture2D" uid="uid://dplbuy0b5m64i" path="res://sklep/bar/bar-removebg-preview.png" id="6_amaxf"]
[ext_resource type="Texture2D" uid="uid://cywhf22gmrp6" path="res://busStage/assets/busFull.png" id="6_at4s5"]
[ext_resource type="PackedScene" uid="uid://b83nmbgv7a6xv" path="res://player/player.tscn" id="7_dy64q"]
[ext_resource type="Texture2D" uid="uid://sngkrto41vqk" path="res://sklep/zabka/ropucha-removebg-preview.png" id="7_gioeg"]
[ext_resource type="Texture2D" uid="uid://doa8qnbpa1jr6" path="res://sklep/lombard/lombard-removebg-preview.png" id="8_160ro"]
[ext_resource type="Texture2D" uid="uid://w7e52aku3att" path="res://sklep/komis/auto-removebg-preview.png" id="9_o7vt3"]
[ext_resource type="Texture2D" uid="uid://brnw1j7cptbnc" path="res://busStage/spacja-removebg-preview.png" id="12_yfone"]

[sub_resource type="SystemFont" id="SystemFont_uva26"]

[sub_resource type="LabelSettings" id="LabelSettings_essdf"]
font = SubResource("SystemFont_uva26")
font_size = 35
font_color = Color(1, 0.79, 0.1, 0.8)
outline_size = 6
outline_color = Color(0.6, 0, 0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_3by7g"]
distance = -443.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4kjgy"]
size = Vector2(441.375, 481)

[node name="World" type="Node2D"]

[node name="GameDirector" type="Node2D" parent="."]
script = ExtResource("2_xunmq")

[node name="EnemySpawner" type="Node2D" parent="GameDirector" node_paths=PackedStringArray("player")]
position = Vector2(-785, 106)
script = ExtResource("3_5fa7t")
enemy_scene = ExtResource("3_ifilt")
enemy_scene2 = ExtResource("4_3ga68")
player = NodePath("../../Player")

[node name="EnemySpawner2" type="Node2D" parent="GameDirector" node_paths=PackedStringArray("player")]
position = Vector2(794, 110)
script = ExtResource("3_5fa7t")
enemy_scene = ExtResource("3_ifilt")
enemy_scene2 = ExtResource("4_3ga68")
player = NodePath("../../Player")

[node name="Timer" type="Timer" parent="GameDirector"]
one_shot = true
autostart = true

[node name="BackgroundController" type="Node2D" parent="GameDirector"]
script = ExtResource("2_ww0k3")

[node name="Background2" type="Sprite2D" parent="GameDirector/BackgroundController"]
z_index = -3
position = Vector2(-659, 65)
scale = Vector2(0.41, 0.41)
texture = ExtResource("3_m46g4")

[node name="Background3" type="Sprite2D" parent="GameDirector/BackgroundController"]
z_index = -3
position = Vector2(907, 65)
scale = Vector2(0.41, 0.41)
texture = ExtResource("3_m46g4")

[node name="Background" type="Sprite2D" parent="GameDirector/BackgroundController"]
z_index = -3
position = Vector2(-2210, 65)
scale = Vector2(0.400926, 0.400926)
texture = ExtResource("3_m46g4")

[node name="StartStopTimer" type="Timer" parent="GameDirector/BackgroundController"]
one_shot = true

[node name="Bar" type="Sprite2D" parent="GameDirector/BackgroundController"]
z_index = -1
position = Vector2(2090, 104)
scale = Vector2(1.582, 1.582)
texture = ExtResource("6_amaxf")

[node name="Zabka" type="Sprite2D" parent="GameDirector/BackgroundController"]
z_index = -2
position = Vector2(2090, 104)
scale = Vector2(1.582, 1.582)
texture = ExtResource("7_gioeg")

[node name="Lombard" type="Sprite2D" parent="GameDirector/BackgroundController"]
z_index = -2
position = Vector2(2090, 104)
scale = Vector2(1.582, 1.582)
texture = ExtResource("8_160ro")

[node name="Auto" type="Sprite2D" parent="GameDirector/BackgroundController"]
z_index = -2
position = Vector2(2090, 104)
scale = Vector2(1.582, 1.582)
texture = ExtResource("9_o7vt3")

[node name="Bus" type="Sprite2D" parent="GameDirector"]
z_index = -1
texture = ExtResource("6_at4s5")
script = ExtResource("6_0nbmv")

[node name="Label" type="Label" parent="GameDirector/Bus"]
z_index = 1
offset_left = -1001.0
offset_top = -211.0
offset_right = -651.0
offset_bottom = -160.0
label_settings = SubResource("LabelSettings_essdf")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="GameDirector/Bus"]
z_index = 1
offset_left = 561.0
offset_top = -237.0
offset_right = 911.0
offset_bottom = -188.0
label_settings = SubResource("LabelSettings_essdf")
horizontal_alignment = 1

[node name="space1" type="Sprite2D" parent="GameDirector"]
position = Vector2(-790, -71)
scale = Vector2(0.832, 0.832)
texture = ExtResource("12_yfone")

[node name="space2" type="Sprite2D" parent="GameDirector"]
position = Vector2(778, -107)
scale = Vector2(0.678, 0.678)
texture = ExtResource("12_yfone")

[node name="Player" parent="." instance=ExtResource("7_dy64q")]
position = Vector2(-820, 256)

[node name="Map" type="Node2D" parent="."]
position = Vector2(-1, -26)

[node name="StaticBody2D" type="StaticBody2D" parent="Map"]
position = Vector2(-22, 5)
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/StaticBody2D"]
shape = SubResource("WorldBoundaryShape2D_3by7g")

[node name="Area2D" type="Area2D" parent="Map"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/Area2D"]
position = Vector2(-806.688, 147.5)
shape = SubResource("RectangleShape2D_4kjgy")

[node name="Area2D2" type="Area2D" parent="Map"]
position = Vector2(-12, 24)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Map/Area2D2"]
position = Vector2(784, 95)
shape = SubResource("RectangleShape2D_4kjgy")

[connection signal="timeout" from="GameDirector/Timer" to="GameDirector" method="_on_timer_timeout"]
[connection signal="body_entered" from="Map/Area2D" to="GameDirector" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Map/Area2D" to="GameDirector" method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Map/Area2D2" to="GameDirector" method="_on_area_2d_2_body_entered"]
[connection signal="body_exited" from="Map/Area2D2" to="GameDirector" method="_on_area_2d_2_body_exited"]
